2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(string-null? foo)' instead of `(string=? "" foo)'.

	* postgres-gxrepl.scm (gxrepl -read): Use `string-null?'.
	(gxrepl -print): Likewise.
	* postgres-table.scm (pgtable-manager): Likewise.

2008-09-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `size_t' instead of `scm_sizet'.

	* libpq.c (xc_free): Change return value type to `size_t'.
	(res_free, sepo_free): Likewise.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.

	* gi.h (SCM_OUTPORTP) [!HAVE_SCM_OUTPORTP]:
	Delete macro and surrounding #ifndef construct.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Hone C internals: Refactor, increase/add abstraction, etc.

	* libpq.c (PROB, NOINTS, INTSOK, GIVENP): New macros.
	(EXACTLY_FALSEP, EXACTLY_TRUEP): Delete macros.
	(DEFAULT_FALSE, RETURN_FALSE, RETURN_UNSPECIFIED): New macros.
	(ASSERT, ASSERT_STRING): New macros.
	(SYSCALL): Rename macro from `SCM_SYSCALL'.
	(ROZT_X): Use `gh_str2scm'.
	(SMOBDATA, PCHAIN, ERROR): New macros.
	(MEMORY_ERROR, SYSTEM_ERROR, WBPORT): New macros.
	(xc_unbox): Use `SMOBDATA'.
	(ASSERT_CONNECTION): Use `ASSERT'.
	(CONN_CONN): New macro.
	(xc_name): New static char array (string).
	(xc_display): Rewrite.
	(VALIDATE_CONNECTION_UNBOX_DBCONN): Use `ASSERT' and `CONN_CONN'.
	(LOB_CONN): Use `CONN_CONN'.
	(LOBPORTP): Use `SCM_NIMP'.
	(lob_mklobport, lob_lo_creat, lob_lo_open, lob_lo_unlink): Update.
	(ASSERT_PORT, LOB_STREAM): New macros.
	(lob_lo_get_connection, lob_lo_get_oid, lob_lo_tell, lob_flush)
	(lob_end_input, lob_seek, lob_lo_seek, lob_fill_input, lob_write)
	(lob_lo_read, lob_close, lob_mark, lob_free, lob_lo_import)
	(lob_lo_export, lob_printpt, res_unbox, res_box): Update.
	(VALIDATE_RESULT_UNBOX): Use `ASSERT'.
	(res_name): New static cahr array (string).
	(res_display): Rewrite.
	(prep_paramspecs): Use `gh_vector_length'; update; call
	`free' unconditionally (without checking if its arg is NULL).